kubernetes/clusters/hyperion/mimir/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-strawslabs
  namespace: monitoring
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # link.argocd.argoproj.io/external-link: "https://mimir-hyperion.strawslabs.com/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "mimir-hyperion.strawslabs.com"
      secretName: mimir-cert-strawslabs-tls
  rules:
    - host: "mimir-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
